--- a/app/globals.css
+++ b/app/globals.css
@@ -9,8 +9,8 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #ffffff;
+    --foreground: #211010;
   }
 }
 
@@ -18,4 +18,14 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+h1 {
+  color: #4c1cdb;
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+h2 {
+  color: #4c1cdb;
 }
